--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -360,7 +360,7 @@
 	var socket = io()
 
     socket.on("connect", function() {
-        socket.emit("join", {'type': 1, 'deployment_id': deployment_id, 'incident_id': incident_id})
+        socket.emit("join", {'type': 2, 'deployment_id': deployment_id, 'incident_id': incident_id})
     })
 
 	function recieve(data) {
@@ -480,7 +480,7 @@
 			}
 			$('#Tasks').append(data['html'])
 			flask_moment_render_all()
-			progressBar();
+			progressBar()
 		}
 	})
 
@@ -496,7 +496,7 @@
 				$('#Task' + data['id']).prop('checked', false)
 			}
 			flask_moment_render_all()
-	    	progressBar();
+	    	progressBar()
 		}
 	})
 
@@ -512,9 +512,7 @@
 	})
 
 	socket.on('activity', function(data) {
-		for (var i = data['html'].length-1; i >= 0; i--) {
-			$('#Activity').prepend(data['html'][i])
-		}
+		$('#Activity').prepend(data['html'])
 		flask_moment_render_all()
 	})
 
@@ -525,20 +523,22 @@
 	}
 
 	$(document).ready(function() {
-	progressBar();
-	$('#addTaskSelect').select2({
-	    allowClear: true,
-	    placeholder: {id:'0', text:'Assign to users, not required'},
-	    templateResult: format,
-	    templateSelection: format,
-	});
-	$('#changeAllocationSelect').select2({
-	    allowClear: true,
-	    placeholder: {id:'0', text:'Choose which users to allocate this incident to'},
-	    templateResult: format,
-        templateSelection: format,
-	});
-	});
+		progressBar()
+		$('#addTaskSelect').select2({
+			allowClear: true,
+			placeholder: {id:'0', text: 'Assign to users, not required'},
+			templateResult: format,
+			templateSelection: format,
+		})
+		$('#changeAllocationSelect').select2({
+			allowClear: true,
+			placeholder: {id:'0', text: 'Choose which users to allocate this incident to'},
+			templateResult: format,
+			templateSelection: format,
+		})
+		$('#addTaskSelect').val(null).trigger('change');
+		$('#changeAllocationSelect').val(null).trigger('change');
+	})
 </script>
 <script>
 // Initialize and add the map
