--- a/app/templates/incidents.html
+++ b/app/templates/incidents.html
@@ -1,14 +1,14 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block css %}
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" type="text/css" href="/static/css/temp.css">
 {% endblock %}
 {% block heading %}
 <a href="#newIncidentModal" data-toggle="modal" data-target="#newIncidentModal" class="btn btn-icon-split btn-success mb-1">
-<span class="btn-icon">
-<i class="fas fa-plus"></i>
-</span>
-<span class="text">New Incident</span>
+	<span class="btn-icon">
+	<i class="fas fa-plus"></i>
+	</span>
+	<span class="text">New Incident</span>
 </a>
 {% endblock %}
 {% block body %}
@@ -224,7 +224,7 @@
 	var socket = io()
 
     socket.on("connect", function() {
-        socket.emit("join", {'type': 0, 'deployment_id': deployment_id})
+        socket.emit("join", {'type': 1, 'deployment_id': deployment_id})
     })
 
 	function recieve(data) {
