--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block css %}
 <link href="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/css/select2.min.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
+<link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
 {% endblock %}
 {% block heading %}
 <div>
@@ -354,6 +356,9 @@
 </div>
 {% endblock %}
 {% block scripts %}
+<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
+<script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/js/select2.min.js"></script>
 <script type="text/javascript" charset="utf-8">
 	var deployment_id = {{ deployment.id }}
 	var incident_id = {{ incident.id }}
@@ -538,20 +543,17 @@
 		})
 		$('#addTaskSelect').val(null).trigger('change');
 		$('#changeAllocationSelect').val(null).trigger('change');
+
+		  var map = L.map('map').setView({lat: 55.872326, lng: -4.288094}, 15)
+		  L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+			attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+			minZoom: 4,
+			maxZoom: 22,
+			id: 'mapbox/streets-v11',
+			accessToken: '{{ config['MAPBOX_API_KEY'] }}'
+		}).addTo(map);
+
+		var marker = L.circleMarker([55.872326, -4.288094]).addTo(map);
 	})
 </script>
-<script>
-// Initialize and add the map
-function initMap() {
-  // The location of Uluru
-  var uluru = {lat: 55.872326, lng: -4.288094};
-  // The map, centered at Uluru
-  var map = new google.maps.Map(
-      document.getElementById('map'), {zoom: 15, center: uluru});
-  // The marker, positioned at Uluru
-  var marker = new google.maps.Marker({position: uluru, map: map});
-}
-</script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ config['GOOGLE_MAPS_API_KEY'] }}&callback=initMap"></script>
-<script src="https://cdn.jsdelivr.net/npm/select2@4.0.12/dist/js/select2.min.js"></script>
 {% endblock %}
