--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -199,8 +199,7 @@
 				</div>
 			</div>
 			<div class="card-body">
-				<div id="map" class="map-container">
-				</div>
+				<div id="Map" class="map-container-incident"></div>
 			</div>
 		</div>
 		<div class="card shadow mb-4">
@@ -544,7 +543,7 @@
 		$('#addTaskSelect').val(null).trigger('change');
 		$('#changeAllocationSelect').val(null).trigger('change');
 
-		  var map = L.map('map').setView({lat: 55.872326, lng: -4.288094}, 15)
+		  var map = L.map('Map').setView({lat: 55.872326, lng: -4.288094}, 15)
 		  L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
 			attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
 			minZoom: 4,
