--- a/app/static/css/temp.css
+++ b/app/static/css/temp.css
@@ -76,6 +76,7 @@ input[type=checkbox][disabled]{
   cursor: not-allowed;
 }
 
+.list-group-item.list-group-flush:hover,
 tr:hover {
     cursor: pointer;
     background-color: #f6f8fe !important;
@@ -318,4 +319,30 @@ li.update-log > .update-log-text:before {
 
 .overflow-auto.pr-0 {
     max-height: 70vh;
+}
+
+.map-card-actions-list {
+  display: flex;
+  align-items: center;
+}
+
+.map-card-actions i {
+  color: #858796;
+  margin-right: .5rem;
+}
+
+.map-card-actions-text {
+  color: #858796;
+  font-size: .8rem;
+  margin-left: -.25rem;
+  margin-right: .5rem;
+}
+
+.map-card-assigned-to {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+  margin-left: .25rem;
+  width: 28px;
+  height: 28px;
 }
